7901282: Tighten up the JMH security policies